# FMHD

./: .gitignore  CMakeLists.txt  README.md  build_minhashcpp.sh
include/: commons.hpp  constants.hpp  sketch.hpp  sketch_file_handler.hpp
include/distances/: dist_map.hpp  ibf.hpp  index_packing.hpp  index_packing_16bits.hpp  mode.hpp  mode_byte_check.hpp  mode_trailing_zeros.hpp  naive_dist.hpp
src/: commons.cc  main.cc  sketch.cc  sketch_file_handler.cc
src/distances/: ibf.cc  index_packing.cc  index_packing_16bits.cc  mode.cc  mode_byte_check.cc  mode_trailing_zeros.cc  naive_dist.cc
